@@ -13,7 +13,7 @@ apply plugin: 'application'
 sourceCompatibility = 1.8
 targetCompatibility = 1.8
 mainClassName = 'edu.mcw.rgd.QC'
-String myAppName = 'DataQCPipeline'
+String myAppName = 'data-qc-pipeline'
 
 project.archivesBaseName = myAppName
 
@@ -23,12 +23,12 @@ repositories {
 
 dependencies {
     implementation 'org.apache.commons:commons-dbcp2:2.9.0'
-    implementation 'commons-net:commons-net:3.8.0'
-    implementation 'org.apache.logging.log4j:log4j-api:2.19.0'
-    implementation 'org.apache.logging.log4j:log4j-core:2.19.0'
-    implementation 'com.oracle.database.jdbc:ojdbc8:21.3.0.0'
-    implementation 'org.springframework:spring-beans:5.2.6.RELEASE'
-    implementation 'org.springframework:spring-jdbc:5.2.6.RELEASE'
+    implementation 'commons-net:commons-net:3.9.0'
+    implementation 'org.apache.logging.log4j:log4j-api:2.20.0'
+    implementation 'org.apache.logging.log4j:log4j-core:2.20.0'
+    implementation 'com.oracle.database.jdbc:ojdbc8:21.4.0.0'
+    implementation 'org.springframework:spring-beans:5.3.0'
+    implementation 'org.springframework:spring-jdbc:5.3.0'
 
     implementation fileTree(dir: 'lib', include: '*.jar')
 }
